atividade de implantação do serviço content moderation finalizada
